# MySQP

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/algorithms/: algorithm_18_1_jax.py  algorithm_18_1_naive.py
experiments/differentiability/: batch_diff_demo.py  test_diff_simple.py
experiments/robustness/: better_visualization.py  loss.py  run.py  visualize_optimization.py
scripts/: generate_code.py  scrape_problems.py
sqp/: __init__.py
sqp/benchmarks/: __init__.py  modopt_benchmarking.py  problems.py  runner.py  utils.py
sqp/solvers/: __init__.py  jax_sqp.py  jax_wrapper.py  opensqp.py  scipy_wrapper.py  torch_sqp.py  torch_wrapper.py
