[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqp"
version = "0.1.0"
description = "Sequential Quadratic Programming solver implementations in JAX, PyTorch, and SciPy"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Abhinav PJ"},
]
dependencies = [
    "numpy>=1.21.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "torch>=2.0.0",
    "scipy>=1.9.0",
    "cvxpy>=1.3.0",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "google-generativeai>=0.3.0",
    "groq>=0.4.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sqp*"]
exclude = ["tests*", "docs*", "examples*", "experiments*", "scripts*"]
